v10.3.0/_sources/generated/pcdsdevices.jet.InjectorWithFine.rst.txt
pcdsdevices.jet.InjectorWithFine
================================

.. currentmodule:: pcdsdevices.jet

.. autoclass:: InjectorWithFine

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - x (UnrelatedComponent)
          - :class:`~pcdsdevices.epics_motor.IMS`
          - 
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.jet.Injector`
    
        * - y (UnrelatedComponent)
          - :class:`~pcdsdevices.epics_motor.IMS`
          - 
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.jet.Injector`
    
        * - z (UnrelatedComponent)
          - :class:`~pcdsdevices.epics_motor.IMS`
          - 
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.jet.Injector`
    
        * - fine_x (UnrelatedComponent)
          - :class:`~pcdsdevices.epics_motor.IMS`
          - 
          - 
          - normal
          - 
    
        * - fine_y (UnrelatedComponent)
          - :class:`~pcdsdevices.epics_motor.IMS`
          - 
          - 
          - normal
          - 
    
        * - fine_z (UnrelatedComponent)
          - :class:`~pcdsdevices.epics_motor.IMS`
          - 
          - 
          - normal
          - 
    

    
    
    
    
    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: post_elog_status
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: screen
    .. automethod:: set_defaults
    .. automethod:: stage_group_instances
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: connection_timeout
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: needs_parent
    .. autoattribute:: stage_group
    .. autoattribute:: subscriptions
    
    